Bug 387053 - Multi-selection has entries in wrong order
Summary: Multi-selection has entries in wrong order
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks: 386036
  Show dependency treegraph
 
Reported: 2017-11-18 02:33 UTC by Robby Stephenson
Modified: 2019-07-14 19:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2017-11-18 02:33:24 UTC
Copied from Bug 386036:

1/ Field replication - Multi-selection

The default field values when editing multiple entries cannot be selected and it seems to be random (I can't understand the logic at least).

I sometimes want to replicate a number of fields from one video entry to another. Say, for example, I have created two video entries:
(i) Bambi - Director = Disney, Walt
(ii) Cinderella - Director = Disney
and I want to copy across "Disney, Walt" from Bambi to Cinderella (and supersede "Disney" as the Director for Cinderella). Of course, this is a simple example - in real life, I would have a significant number of fields to copy across, and/or long values in certain fields (e.g. a long list of subtitle languages) that I don't want to retype manually. And in real life, the fields for the second entry would most likely be empty.

In v2.3.12, the way I would do this was by selecting both entries, right-clicking, selecting "Edit Entries", going to "Other People" tab > Director. Because both entries have different values in the "Director" field, it would be grayed out and deselected by default. By selecting the field, I would override the value in that field in both entries with whatever value shows in that field.

Now, of course, for the purpose of doing this, the "default" value in the field matters - the whole purpose of doing this is to save me from having to re-type the value (say, for instance, a long list of subtitle languages).

In v2.3.12, I knew that I could get the default value to be taken from either entry by selecting this entry first, then selecting (Ctrl+Click on the list of entries) the second entry. In this example, if I clicked on Bambi, then Ctrl+Click on Cinderella, and Edit Entries, the default value for "Director" would be "Disney, Walt", then I would select (by ticking the check box) the Director field and it would replace the value in the Director field by "Disney, Walt" in both entries (i.e. mainly in Cinderella).

In v3.0.2, I don't seem to find a way of doing this any more. Regardless of the order of selection of entries (Bambi first or Cinderella first, then the other), it always shows "Disney" as the default value in the "Director" field. I don't understand how the default value is determined (from which entry it is taken).

Process to reproduce:
a) Open the attached xml file
b) Click on Bambi
c) Ctrl+Click on Cinderella
d) Right-click > Edit Entries
e) Go to the "Other People" tab
f) The default value in the Director field is "Disney"
g) Click on "Close"
h) Click on Cinderella
i) Ctrl+Click on Bambi
j) Right-click > Edit Entries
k) Go to the "Other People" tab
l) The default value in the Director field is "Disney"
m) Click on "Close"

Expected Result:
At step f) above, the default value should be (would have been in v2.3.12) "Disney, Walt" because Bambi was selected first and that's the value in the Director field for Bambi.
Comment 1 Robby Stephenson 2017-11-18 03:49:44 UTC
Git commit 98f1b06db8c7a68f8ca815e16292184d4282a63c by Robby Stephenson.
Committed on 18/11/2017 at 03:49.
Pushed by rstephenson into branch 'master'.

Fix bug with multi-selection and entry editing

The selection list was using a QSet which did not retain ordering so the
multi-selection editing was broken. After fixing that, also fix the
triggering of selection between multiple views.
FIXED-IN: 3.1.1

M  +4    -0    ChangeLog
M  +0    -1    src/detailedlistview.cpp
M  +0    -1    src/mainwindow.cpp
M  +37   -22   src/models/entryselectionmodel.cpp
M  +2    -1    src/models/entryselectionmodel.h

https://commits.kde.org/tellico/98f1b06db8c7a68f8ca815e16292184d4282a63c
Comment 2 Robby Stephenson 2017-11-19 21:03:08 UTC
Git commit ad3ff15601b1a3c025c72aaf5cfc69ab0ae2c7ac by Robby Stephenson.
Committed on 18/11/2017 at 02:41.
Pushed by rstephenson into branch 'pictureflow'.

Fix bug with multi-selection and entry editing

The selection list was using a QSet which did not retain ordering so the
multi-selection editing was broken. After fixing that, also fix the
triggering of selection between multiple views.
FIXED-IN: 3.1.1

M  +4    -0    ChangeLog
M  +30   -21   src/models/entryselectionmodel.cpp
M  +2    -1    src/models/entryselectionmodel.h

https://commits.kde.org/tellico/ad3ff15601b1a3c025c72aaf5cfc69ab0ae2c7ac
Comment 3 Robby Stephenson 2019-07-14 19:40:45 UTC
Git commit f19e1994b9460e448db99779b6e8b1e32dddf8b9 by Robby Stephenson.
Committed on 14/07/2019 at 19:31.
Pushed by rstephenson into branch 'pictureflow'.

Fix bug with multi-selection and entry editing

The selection list was using a QSet which did not retain ordering so the
multi-selection editing was broken. After fixing that, also fix the
triggering of selection between multiple views.
FIXED-IN: 3.1.1

M  +0    -1    src/models/entryselectionmodel.cpp

https://commits.kde.org/tellico/f19e1994b9460e448db99779b6e8b1e32dddf8b9