Fix bug with multi-selection and entry editing

The selection list was using a QSet which did not retain ordering so the
multi-selection editing was broken. After fixing that, also fix the
triggering of selection between multiple views.

BUG: 387053
FIXED-IN: 3.1.1